--- a/catalogo/src/Componentes/Footer.module.css
+++ b/catalogo/src/Componentes/Footer.module.css
@@ -1,14 +1,14 @@
-.conteiner{
+.conteiner {
     background-color: #4485c1;
     padding: 60px;
-    margin-top: 626px;
+    margin-top: 30px; /* ou auto */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     align-items: center;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    
 }
+
 
 p{
     color: #ffff;
@@ -17,3 +17,4 @@ p{
 a{
     color: #ffff;
 }
+
